# sensor_component_description

camera_description/urdf/: stereo_camera.xacro
camera_description/urdf/gazebo/: stereo_camera.gazebo.xacro
gnss_description/: CMakeLists.txt  package.xml
gnss_description/urdf/: gnss.xacro
