<?xml version="1.0"?>
<package format="2">
  <name>gnss_description</name>
  <version>0.1.0</version>
  <description>The gnss_description package</description>

  <maintainer email="sgarg@realliferobotics.com">Shaswat Garg</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
